{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "TouchScreen",
            "id": "225a8b32-d982-4fd3-a947-869231b19ad6",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "3d65121a-76ee-4422-91c3-e9786cc21335",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecTouchPosition",
                    "type": "PassThrough",
                    "id": "2767caa0-f8fe-4c8d-859e-b6d06c9e4975",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Touch",
                    "type": "Button",
                    "id": "e8446b6d-1e9a-4f19-b5a0-fc12e2652071",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondTouch",
                    "type": "Button",
                    "id": "d39195c9-29e9-4c47-aed4-604a0839126c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DoubleTouch",
                    "type": "Button",
                    "id": "b7c2abbe-c6f8-4dcc-b681-8f81989f4e26",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "Swipe",
                    "type": "Value",
                    "id": "7a51eba8-49ee-439d-a1b9-f54d5815625a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Shake",
                    "type": "Value",
                    "id": "d2757f23-251d-46b7-aa97-5d9662d1e3ff",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c211d2d3-b97c-423a-9d3a-90f6ffd4cadb",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6271f67c-3ced-4d66-80b8-45245d1909f0",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69c9e8ce-7bfa-45a4-902b-b4ca900f4e4d",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e51c1a5b-022b-48b3-9f5f-3c107424921e",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DoubleTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "2a76e680-2505-4e1e-a458-dc0069271f9a",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swipe",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "0494914c-770b-4c79-b258-0a48bdbc3e0a",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swipe",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "8c0a3144-e679-4213-a438-4f47cd1a5626",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swipe",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b9aca77d-ed3c-43d9-9dfc-daf199ac57a8",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b7f606c-b83a-401f-b480-cbeb2a9cf257",
                    "path": "<Accelerometer>/acceleration",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shake",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}